src/scss/block/link.scss
@import "~scss/_vars";

.blocks {
	.block.blockLink {
		.isArchived {
			.cardName { color: $colorMediumGrey; }
            .cardName span::before { display: none; }
		}

		.focusable.br { border-radius: 12px; }

        .loading, .deleted { color: $colorMediumGrey; display: flex; gap: 0px 6px; align-items: center; }
        .loading, .deleted {
            .name { display: inline-block; vertical-align: top; max-width: calc(100% - 26px); position: relative; @include text-overflow-nw; }
        }

		.loading {
			.loaderWrapper { width: 20px; height: 20px; display: inline-block; vertical-align: top; position: relative; }
			.loader { width: 20px; height: 20px; margin: -10px 0px 0px -10px; }
		}
        .deleted {
            .icon.ghost { width: 24px; height: 24px; }
        }

		.linkCard { display: inline-block; vertical-align: top; width: 100%; }
        .linkCard {
            .sides { display: flex; flex-direction: row; }
			.side { transition: border-color 0.2s ease-in-out; }
			.side.left { width: 100%; position: relative; }
			.side.right { display: none; overflow: hidden; }

			.side.left {
				.txt { width: 100%; }
			}

			.cover { position: relative; min-height: 116px; background-color: unset; }
			.cardName { display: flex; flex-direction: row; gap: 0px 6px; align-items: center; }
			.cardName .name  { transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out; }
			.cardDescription { @include text-small; line-height: 16px; @include clamp2; margin: 2px 0px 0px 0px; }
			.cardDescription:empty { margin: 0px; }

			.cardFeatured { @include text-small; color: $colorDarkGrey; line-height: 16px; margin: 2px 0px 0px 0px; }
			.cardFeatured:empty { margin: 0px; }

			.cardFeatured {
				.item { position: relative; display: inline-block; vertical-align: top; margin: 0px 10px 0px 0px; }
				.item::after { 
					content: ""; display: block; position: absolute; right: -6px; top: 50%; width: 2px; height: 2px; background: $colorDarkGrey; 
					margin: -1px 0px 0px 0px;
				}

				.item:last-child { margin: 0px; }
				.item:last-child::after { display: none; }
			}
        }

		.linkCard.text {
			.side.left {
				.txt { line-height: 24px; vertical-align: top; display: flex; gap: 0px 6px; align-items: center; }
			}

			.cardName { display: flex; flex-wrap: nowrap; vertical-align: top; flex-shrink: 0; flex-grow: 0; max-width: 50%; }
			.cardName {
				.name { @include clamp1; font-weight: 500; }
			}

			.cardDescription {
				@include text-small; @include text-overflow-nw; flex-shrink: 1; flex-grow: 0; margin-top: 0; white-space: normal;
				.description { @include clamp1; }
			}
			.cardFeatured {
				@include text-small; @include text-overflow-nw; color: $colorDarkGrey; flex-shrink: 0; max-width: 33%; flex-grow: 0; margin-top: 0;
				display: flex; gap: 0px 6px; align-items: center;
			}

			.div { width: 2px; height: 18px; line-height: 18px; display: inline-block; vertical-align: top; flex-shrink: 0; flex-grow: 0; }
			.div {
				.inner { width: 2px; height: 2px; border-radius: 100%; display: inline-block; vertical-align: middle; background: $colorMediumGrey; }
			}
		}

		.linkCard.card { margin: 8px 0px; }
		.linkCard.card {
			.side.left { padding: 16px; border: 1px solid $colorBorderDark; border-radius: 16px; }
			.side.right { border-radius: 0px 16px 16px 0px; }
			.sides.withBgColor {
				.side { border: 0px; }
			} 

			.cardName { @include text-common; line-height: 18px; }
			.cardName .name { @include clamp2; font-weight: 500; }

			.archive { position: absolute; right: 10px; top: 10px; z-index: 1; }
		}

		.linkCard.c18.withIcon {
			.cardName { position: relative; }
			.cardName {
				.iconObject { position: absolute; left: 0; top: 0; }
				.name { text-indent: 24px; }
			}
		}

		.linkCard.c48.withIcon {
			.sides { min-height: 80px; }
			.side.left { padding: 16px 16px 16px 76px; line-height: 44px; }

			.iconObject { position: absolute; left: 16px; top: 16px; background-color: $colorVeryLightGrey; border-radius: 10px; }
		}

		.linkCard.withCover {
			.side.left {
				width: calc(100% - 236px); border-radius: 16px 0px 0px 16px; border-right-width: 0px;
				display: flex; align-items: center;
			}
			.side.right { width: 236px; display: block; border: 1px solid $colorBorderDark; }
		}

		.linkCard.vertical { display: block; }
		.linkCard.vertical {
			.side.left { width: 100%; border-right-width: 1px; }
			.side.right { 
				position: absolute; top: 0px; left: 0px; height: 116px; width: 100%; border-radius: 12px 12px 0px 0px;
				border: 1px solid $colorBorderDark; border-bottom: 0px;
			}
		}

		.linkCard.withCover.vertical { padding-top: 116px; }
		.linkCard.withCover.vertical {
			.side.left { border-radius: 0px 0px 12px 12px }
		}

	}

	.block.blockLink:hover {
		.linkCard.text {
			.cardName .name { border-color: $colorBlack; }
		}
		.linkCard.card {
			.side.left, .side.right { border-color: $colorBlack; }
		}
	}

	.block.blockLink > .wrapContent > .selectable > .dropTarget.isOver.middle {
		.side.left { background: none !important; }
	}

	.block.blockLink > .wrapContent > .dropTarget.targetBot { display: block; height: 2px; }

}

